--- a/index.html
+++ b/index.html
@@ -5,62 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Студия</title>
   </head>
   <body>
     <header>
-      <a href="">
-        <span> Web </span>
-        Studio
-      </a>
-      <nav>
+      <a href="./index.html" class="header-logo">
+        <span class="header-logo-first-part">Web</span>Studio</a
+      >
+      <nav class="header-navigation">
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="./index.html" class="link-nav">Студия</a></li>
+          <li><a href="./portfolio.html" class="link-nav">Портфолио</a></li>
+          <li><a href="" class="link-nav">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="header-mail"
+        >info@devstudio.com</a
+      >
+      <a href="tel:+380961111111" class="header-tel">+38 096 111 11 11</a>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
-      <section>
-        <ul>
+      <section class="benefits-section">
+        <h2 hidden>Преимущества</h2>
+        <ul class="benefits-list">
           <li>
-            <h2>Внимание к деталям</h2>
-            <p>
+            <h2 class="benefits1">Внимание к деталям</h2>
+            <p class="benefits1-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h2>Пунктуальность</h2>
-            <p>
+            <h2 class="benefits2">Пунктуальность</h2>
+            <p class="benefits2-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h2>Планирование</h2>
-            <p>
+            <h2 class="benefits3">Планирование</h2>
+            <p class="benefits3-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h2>Современные технологии</h2>
-            <p>
+            <h2 class="benefits4">Современные технологии</h2>
+            <p class="benefits4-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="benefits-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -68,6 +75,7 @@
               alt="фото 1"
               width="370"
               height="294"
+              class="benefits-img1"
             />
           </li>
           <li>
@@ -76,6 +84,7 @@
               alt="фото 2"
               width="370"
               height="294"
+              class="benefits-img2"
             />
           </li>
           <li>
@@ -84,12 +93,13 @@
               alt="фото 3"
               width="370"
               height="294"
+              class="benefits-img3"
             />
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team-section">
+        <h2 class="tiam-title">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -97,9 +107,10 @@
               alt="фото Игоря Демьяненко"
               width="270"
               height="260"
+              class="team-img1"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-img1-name">Игорь Демьяненко</h3>
+            <p class="team-img1-position">Product Designer</p>
           </li>
           <li>
             <img
@@ -107,9 +118,10 @@
               alt="фото Ольги Репиной"
               width="270"
               height="260"
+              class="team-img2"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-img2-name">Ольга Репина</h3>
+            <p class="team-img2-position">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -117,9 +129,10 @@
               alt="фото Николая Тарасова"
               width="270"
               height="260"
+              class="team-img3"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-img3-name">Николай Тарасов</h3>
+            <p class="team-img3-position">Marketing</p>
           </li>
           <li>
             <img
@@ -127,31 +140,40 @@
               alt="фото Михаила Ермакова"
               width="270"
               height="260"
+              class="team-img4"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-img4-name">Михаил Ермаков</h3>
+            <p class="team-img4-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">
-        <span>Web</span>
-        Studio
-      </a>
-      <address>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo">
+        <span class="footer-logo-first-part">Web</span>Studio</a
+      >
+      <address class="footer-address">
         <ul>
           <li>
             <a
               href="https://goo.gl/maps/AGJeoBty6rTCcjFy5"
               target="_blank"
               rel="nooper, njindex,nofollow"
+              class="footer-address-link"
             >
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@example.com" class="footer-mail"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="footer-mail"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
