--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,27 @@
       >
       <nav>
         <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li>
+            <a
+              href="./index.html"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Студия</a
+            >
+          </li>
+          <li>
+            <a
+              href="./portfolio.html"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Портфолио</a
+            >
+          </li>
+          <li>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+              >Контакты</a
+            >
+          </li>
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
