--- a/index.html
+++ b/index.html
@@ -59,45 +59,49 @@
     <main>
       <section class="hero-section">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+        <button type="button" class="hero-button accent">
+          Заказать услугу
+        </button>
       </section>
       <section class="aboun-benefits-section">
-        <h2 hidden>Преимущества</h2>
+        <h2 class="hide">Преимущества</h2>
         <ul class="aboun-benefits-list list">
           <li>
-            <h2 class="aboun-benefits">Внимание к деталям</h2>
+            <h3 class="aboun-benefits">Внимание к деталям</h3>
             <p class="benefits-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h2 class="aboun-benefits">Пунктуальность</h2>
+            <h3 class="aboun-benefits">Пунктуальность</h3>
             <p class="benefits-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h2 class="aboun-benefits">Планирование</h2>
+            <h3 class="aboun-benefits">Планирование</h3>
             <p class="benefits-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h2 class="aboun-benefits">Современные технологии</h2>
+            <h3 class="aboun-benefits">Современные технологии</h3>
             <p class="benefits-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
-        <h2 class="benefits-title">Чем мы занимаемся</h2>
+      </section>
+      <section>
+        <h3 class="benefits-title">Чем мы занимаемся</h3>
         <ul class="img-benefits-list list">
           <li>
             <img
-              src="./images/img.jpg1(1).jpg"
+              src="./images/img-1.jpg"
               alt="фото 1"
               width="370"
               height="294"
@@ -106,7 +110,7 @@
           </li>
           <li>
             <img
-              src="./images/img.jpg2(1).jpg"
+              src="./images/img-2.jpg"
               alt="фото 2"
               width="370"
               height="294"
@@ -115,7 +119,7 @@
           </li>
           <li>
             <img
-              src="./images/img.jpg3(1).jpg"
+              src="./images/img-3.jpg"
               alt="фото 3"
               width="370"
               height="294"
@@ -129,7 +133,7 @@
         <ul class="team-section-list list">
           <li>
             <img
-              src="./images/img.jpg-igor(1).jpg"
+              src="./images/img-igor.jpg"
               alt="фото Игоря Демьяненко"
               width="270"
               height="260"
@@ -140,7 +144,7 @@
           </li>
           <li>
             <img
-              src="./images/img.jpg-olga(1).jpg"
+              src="./images/img-olga.jpg"
               alt="фото Ольги Репиной"
               width="270"
               height="260"
@@ -151,7 +155,7 @@
           </li>
           <li>
             <img
-              src="./images/img.jpg-mykola(1).jpg"
+              src="./images/img-nikolay.jpg"
               alt="фото Николая Тарасова"
               width="270"
               height="260"
@@ -162,7 +166,7 @@
           </li>
           <li>
             <img
-              src="./images/img.jpg-misha(1).jpg"
+              src="./images/img-misha.jpg"
               alt="фото Михаила Ермакова"
               width="270"
               height="260"
