add portfolio css

--- a/index.html
+++ b/index.html
@@ -59,12 +59,10 @@
     <main>
       <section class="hero-section">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button accent">
-          Заказать услугу
-        </button>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <section class="aboun-benefits-section">
-        <h2 class="hide">Преимущества</h2>
+        <h2 class="visually-hidden">Преимущества</h2>
         <ul class="aboun-benefits-list list">
           <li>
             <h3 class="aboun-benefits">Внимание к деталям</h3>
@@ -105,7 +103,7 @@
               alt="фото 1"
               width="370"
               height="294"
-              class="benefits-img1"
+              class="benefits-img"
             />
           </li>
           <li>
@@ -114,7 +112,7 @@
               alt="фото 2"
               width="370"
               height="294"
-              class="benefits-img2"
+              class="benefits-img"
             />
           </li>
           <li>
@@ -123,7 +121,7 @@
               alt="фото 3"
               width="370"
               height="294"
-              class="benefits-img3"
+              class="benefits-img"
             />
           </li>
         </ul>
@@ -137,7 +135,7 @@
               alt="фото Игоря Демьяненко"
               width="270"
               height="260"
-              class="team-img1"
+              class="team-img"
             />
             <h3 class="team-img-name">Игорь Демьяненко</h3>
             <p class="team-img-position">Product Designer</p>
@@ -148,7 +146,7 @@
               alt="фото Ольги Репиной"
               width="270"
               height="260"
-              class="team-img2"
+              class="team-img"
             />
             <h3 class="team-img-name">Ольга Репина</h3>
             <p class="team-img-position">Frontend Developer</p>
@@ -159,7 +157,7 @@
               alt="фото Николая Тарасова"
               width="270"
               height="260"
-              class="team-img3"
+              class="team-img"
             />
             <h3 class="team-img-name">Николай Тарасов</h3>
             <p class="team-img-position">Marketing</p>
@@ -170,7 +168,7 @@
               alt="фото Михаила Ермакова"
               width="270"
               height="260"
-              class="team-img4"
+              class="team-img"
             />
             <h3 class="team-img-name">Михаил Ермаков</h3>
             <p class="team-img-position">UI Designer</p>
