--- a/portfolio.html
+++ b/portfolio.html
@@ -14,17 +14,18 @@
     <title>Портфолио</title>
   </head>
   <body>
-    <header>
-      <a href="./index.html" class="logo">
-        <span class="logo-first-part">Web</span>Studio</a
+    <header class="header-section">
+      <a href="./index.html" class="header-logo">
+        <span class="header-logo-first-part">Web</span>Studio</a
       >
-      <nav>
-        <ul>
+      <nav class="header-navigation">
+        <ul class="header-list list">
           <li>
             <a
               href="./index.html"
               target="_blank"
               rel="noopener noreferrer nofollow"
+              class="link-nav link"
               >Студия</a
             >
           </li>
@@ -33,104 +34,114 @@
               href="./portfolio.html"
               target="_blank"
               rel="noopener noreferrer nofollow"
+              class="link-nav link"
               >Портфолио</a
             >
           </li>
           <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            <a
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              class="link-nav link"
               >Контакты</a
             >
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="header-mail accent"
+        >info@devstudio.com</a
+      >
+      <a href="tel:+380961111111" class="header-tel accent"
+        >+38 096 111 11 11</a
+      >
     </header>
     <main>
-      <h1 hidden>Продукты Вебстудии</h1>
-      <ul>
+      <h1 class="visually-hidden">Продукты Вебстудии</h1>
+      <ul class="list">
         <li>
-          <button type="button">Все</button>
+          <button type="button" class="hero-button">Все</button>
         </li>
         <li>
-          <button type="button">Веб-сайты</button>
+          <button type="button" class="hero-button">Веб-сайты</button>
         </li>
         <li>
-          <button type="button">Приложения</button>
+          <button type="button" class="hero-button">Приложения</button>
         </li>
         <li>
-          <button type="button">Дизайн</button>
+          <button type="button" class="hero-button">Дизайн</button>
         </li>
         <li>
-          <button type="button">Маркетинг</button>
+          <button type="button" class="hero-button">Маркетинг</button>
         </li>
       </ul>
-      <ul>
+      <ul class="list">
         <li>
-          <img src="images/img.jpg1p.jpg" alt="фото продукта1" />
+          <img src="images/img-1p.jpg" alt="фото продукта1" />
           <h2>Технокряк</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="images/img.jpg2p.jpg" alt="фото продукта2" />
+          <img src="images/img-2p.jpg" alt="фото продукта2" />
           <h2>Постер New Orlean vs Golden Star</h2>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="images/img.jpg3p.jpg" alt="фото продукта3" />
+          <img src="images/img-3p.jpg" alt="фото продукта3" />
           <h2>Ресторан Seafood</h2>
           <p>Приложение</p>
         </li>
         <li>
-          <img src="images/img.jpg4p.jpg" alt="фото продукта4" />
+          <img src="images/img-4p.jpg" alt="фото продукта4" />
           <h2>Проект Prime</h2>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="images/img.jpg5p.jpg" alt="фото продукта5" />
+          <img src="images/img-5p.jpg" alt="фото продукта5" />
           <h2>Проект Boxes</h2>
           <p>Приложение</p>
         </li>
         <li>
-          <img src="images/img.jpg6p.jpg" alt="фото продукта6" />
+          <img src="images/img-6p.jpg" alt="фото продукта6" />
           <h2>Inspiration has no Borders</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="images/img.jpg7p.jpg" alt="фото продукта7" />
+          <img src="images/img-7p.jpg" alt="фото продукта7" />
           <h2>Издание Limited Edition</h2>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="images/img.jpg8p.jpg" alt="фото продукта8" />
+          <img src="images/img-8p.jpg" alt="фото продукта8" />
           <h2>Проект LAB</h2>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="images/img.jpg9p.jpg" alt="фото продукта9" />
+          <img src="images/img-9p.jpg" alt="фото продукта9" />
           <h2>Growing Business</h2>
           <p>Приложение</p>
         </li>
       </ul>
     </main>
-    <footer>
-      <a href="">
-        <span>Web</span>
-        Studio
-      </a>
-      <address>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo">
+        <span class="footer-logo-first-part">Web</span>Studio</a
+      >
+      <address class="footer-address">
         <ul>
           <li>
-            <a
-              href="https://goo.gl/maps/AGJeoBty6rTCcjFy5"
-              target="_blank"
-              rel="nooper, njindex,nofollow"
-            >
-              г. Киев, пр-т Леси Украинки, 26
-            </a>
+            <p class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</p>
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@example.com" class="footer-mail accent"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="footer-tel accent link"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
