goit-markup-hw-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
         >+38 096 111 11 11</a
       >
     </header>
-    <main>
+    <main class="main-portfolio">
       <h1 class="visually-hidden">Продукты Вебстудии</h1>
       <ul class="list">
         <li>
@@ -77,47 +77,47 @@
       </ul>
       <ul class="list">
         <li>
-          <img src="images/img-1p.jpg" alt="фото продукта1" />
+          <img src="images/img-1p.jpg" alt="фото продукта1" width="370" />
           <h2>Технокряк</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="images/img-2p.jpg" alt="фото продукта2" />
+          <img src="images/img-2p.jpg" alt="фото продукта2" width="370" />
           <h2>Постер New Orlean vs Golden Star</h2>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="images/img-3p.jpg" alt="фото продукта3" />
+          <img src="images/img-3p.jpg" alt="фото продукта3" width="370" />
           <h2>Ресторан Seafood</h2>
           <p>Приложение</p>
         </li>
         <li>
-          <img src="images/img-4p.jpg" alt="фото продукта4" />
+          <img src="images/img-4p.jpg" alt="фото продукта4" width="370" />
           <h2>Проект Prime</h2>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="images/img-5p.jpg" alt="фото продукта5" />
+          <img src="images/img-5p.jpg" alt="фото продукта5" width="370" />
           <h2>Проект Boxes</h2>
           <p>Приложение</p>
         </li>
         <li>
-          <img src="images/img-6p.jpg" alt="фото продукта6" />
+          <img src="images/img-6p.jpg" alt="фото продукта6" width="370" />
           <h2>Inspiration has no Borders</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="images/img-7p.jpg" alt="фото продукта7" />
+          <img src="images/img-7p.jpg" alt="фото продукта7" width="370" />
           <h2>Издание Limited Edition</h2>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="images/img-8p.jpg" alt="фото продукта8" />
+          <img src="images/img-8p.jpg" alt="фото продукта8" width="370" />
           <h2>Проект LAB</h2>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="images/img-9p.jpg" alt="фото продукта9" />
+          <img src="images/img-9p.jpg" alt="фото продукта9" width="370" />
           <h2>Growing Business</h2>
           <p>Приложение</p>
         </li>
