--- a/index.html
+++ b/index.html
@@ -4,62 +4,75 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Студия</title>
   </head>
   <body>
     <header class="header-section">
-      <a href="./index.html" class="header-logo">
-        <span class="header-logo-first-part">Web</span>Studio</a
-      >
-      <nav class="header-navigation">
-        <ul class="header-list list">
-          <li>
-            <a
-              href="./index.html"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link-nav link"
-              >Студия</a
-            >
-          </li>
-          <li>
-            <a
-              href="./portfolio.html"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link-nav link"
-              >Портфолио</a
-            >
-          </li>
-          <li>
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link-nav link"
-              >Контакты</a
-            >
-          </li>
-        </ul>
-      </nav>
-      <a href="mailto:info@devstudio.com" class="header-mail accent"
-        >info@devstudio.com</a
-      >
-      <a href="tel:+380961111111" class="header-tel accent"
-        >+38 096 111 11 11</a
-      >
+      <div class="container">
+        <a href="./index.html" class="header-logo">
+          <span class="header-logo-first-part">Web</span>Studio</a
+        >
+        <nav class="header-navigation">
+          <ul class="header-list list">
+            <li class="header-item">
+              <a
+                href="./index.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link-nav link"
+                >Студия</a
+              >
+            </li>
+            <li class="header-item">
+              <a
+                href="./portfolio.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link-nav link"
+                >Портфолио</a
+              >
+            </li>
+            <li class="header-item">
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link-nav link"
+                >Контакты</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <div class="header-connect">
+          <a href="mailto:info@devstudio.com" class="header-mail accent"
+            >info@devstudio.com</a
+          >
+          <a href="tel:+380961111111" class="header-tel accent"
+            >+38 096 111 11 11</a
+          >
+        </div>
+      </div>
     </header>
     <main>
       <section class="hero-section">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="hero-button">Заказать услугу</button>
+        </div>
       </section>
       <section class="aboun-benefits-section">
         <h2 class="visually-hidden">Преимущества</h2>
@@ -102,7 +115,6 @@
               src="./images/img-1.jpg"
               alt="фото 1"
               width="370"
-              height="294"
               class="benefits-img"
             />
           </li>
@@ -111,7 +123,6 @@
               src="./images/img-2.jpg"
               alt="фото 2"
               width="370"
-              height="294"
               class="benefits-img"
             />
           </li>
@@ -120,7 +131,6 @@
               src="./images/img-3.jpg"
               alt="фото 3"
               width="370"
-              height="294"
               class="benefits-img"
             />
           </li>
