--- a/portfolio.html
+++ b/portfolio.html
@@ -10,51 +10,60 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Портфолио</title>
   </head>
   <body>
     <header class="header-section">
-      <a href="./index.html" class="header-logo">
-        <span class="header-logo-first-part">Web</span>Studio</a
-      >
-      <nav class="header-navigation">
-        <ul class="header-list list">
-          <li>
-            <a
-              href="./index.html"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link-nav link"
-              >Студия</a
-            >
-          </li>
-          <li>
-            <a
-              href="./portfolio.html"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link-nav link"
-              >Портфолио</a
-            >
-          </li>
-          <li>
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link-nav link"
-              >Контакты</a
-            >
-          </li>
-        </ul>
-      </nav>
-      <a href="mailto:info@devstudio.com" class="header-mail accent"
-        >info@devstudio.com</a
-      >
-      <a href="tel:+380961111111" class="header-tel accent"
-        >+38 096 111 11 11</a
-      >
+      <div class="container">
+        <a href="./index.html" class="header-logo">
+          <span class="header-logo-first-part">Web</span>Studio</a
+        >
+        <nav class="header-navigation">
+          <ul class="header-list list">
+            <li>
+              <a
+                href="./index.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link-nav link"
+                >Студия</a
+              >
+            </li>
+            <li>
+              <a
+                href="./portfolio.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link-nav link"
+                >Портфолио</a
+              >
+            </li>
+            <li>
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link-nav link"
+                >Контакты</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com" class="header-mail accent"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+380961111111" class="header-tel accent"
+          >+38 096 111 11 11</a
+        >
+      </div>
     </header>
     <main class="main-portfolio">
       <h1 class="visually-hidden">Продукты Вебстудии</h1>
