--- a/index.html
+++ b/index.html
@@ -47,23 +47,15 @@
               >
             </li>
             <li class="header-item">
-              <a
-                href=""
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="link-nav link"
+              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link-nav link"
                 >Контакты</a
               >
             </li>
           </ul>
         </nav>
         <div class="header-connect">
-          <a href="mailto:info@devstudio.com" class="header-mail accent"
-            >info@devstudio.com</a
-          >
-          <a href="tel:+380961111111" class="header-tel accent"
-            >+38 096 111 11 11</a
-          >
+          <a href="mailto:info@devstudio.com" class="header-mail accent">info@devstudio.com</a>
+          <a href="tel:+380961111111" class="header-tel accent">+38 096 111 11 11</a>
         </div>
       </div>
     </header>
@@ -80,29 +72,25 @@
           <li>
             <h3 class="aboun-benefits">Внимание к деталям</h3>
             <p class="benefits-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="aboun-benefits">Пунктуальность</h3>
             <p class="benefits-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="aboun-benefits">Планирование</h3>
             <p class="benefits-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+              Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="aboun-benefits">Современные технологии</h3>
             <p class="benefits-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
         </ul>
@@ -111,28 +99,13 @@
         <h3 class="benefits-title">Чем мы занимаемся</h3>
         <ul class="img-benefits-list list">
           <li>
-            <img
-              src="./images/img-1.jpg"
-              alt="фото 1"
-              width="370"
-              class="benefits-img"
-            />
+            <img src="./images/img-1.jpg" alt="фото 1" width="370" class="benefits-img" />
           </li>
           <li>
-            <img
-              src="./images/img-2.jpg"
-              alt="фото 2"
-              width="370"
-              class="benefits-img"
-            />
+            <img src="./images/img-2.jpg" alt="фото 2" width="370" class="benefits-img" />
           </li>
           <li>
-            <img
-              src="./images/img-3.jpg"
-              alt="фото 3"
-              width="370"
-              class="benefits-img"
-            />
+            <img src="./images/img-3.jpg" alt="фото 3" width="370" class="benefits-img" />
           </li>
         </ul>
       </section>
@@ -187,26 +160,24 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">
-        <span class="footer-logo-first-part">Web</span>Studio</a
-      >
-      <address class="footer-address">
-        <ul>
-          <li>
-            <p class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</p>
-          </li>
-          <li>
-            <a href="mailto:info@example.com" class="footer-mail accent"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380991111111" class="footer-tel accent link"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="footer-logo"
+          ><span class="footer-logo-first-part">Web</span>Studio
+        </a>
+        <address class="footer-address">
+          <ul class="footer-list link list">
+            <li>
+              <p class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</p>
+            </li>
+            <li>
+              <a href="mailto:info@example.com" class="footer-mail accent">info@example.com</a>
+            </li>
+            <li>
+              <a href="tel:+380991111111" class="footer-tel accent">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
