--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         >
         <nav class="header-navigation">
           <ul class="header-list list">
-            <li>
+            <li class="header-item">
               <a
                 href="./index.html"
                 target="_blank"
@@ -37,7 +37,7 @@
                 >Студия</a
               >
             </li>
-            <li>
+            <li class="header-item">
               <a
                 href="./portfolio.html"
                 target="_blank"
@@ -46,113 +46,107 @@
                 >Портфолио</a
               >
             </li>
-            <li>
-              <a
-                href=""
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="link-nav link"
+            <li class="header-item">
+              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link-nav link"
                 >Контакты</a
               >
             </li>
           </ul>
         </nav>
-        <a href="mailto:info@devstudio.com" class="header-mail accent"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+380961111111" class="header-tel accent"
-          >+38 096 111 11 11</a
-        >
+        <div class="header-connect">
+          <a href="mailto:info@devstudio.com" class="header-mail accent">info@devstudio.com</a>
+          <a href="tel:+380961111111" class="header-tel accent">+38 096 111 11 11</a>
+        </div>
       </div>
     </header>
     <main class="main-portfolio">
       <h1 class="visually-hidden">Продукты Вебстудии</h1>
-      <ul class="list">
-        <li>
-          <button type="button" class="hero-button">Все</button>
-        </li>
-        <li>
-          <button type="button" class="hero-button">Веб-сайты</button>
-        </li>
-        <li>
-          <button type="button" class="hero-button">Приложения</button>
-        </li>
-        <li>
-          <button type="button" class="hero-button">Дизайн</button>
-        </li>
-        <li>
-          <button type="button" class="hero-button">Маркетинг</button>
-        </li>
-      </ul>
-      <ul class="list">
-        <li>
-          <img src="images/img-1p.jpg" alt="фото продукта1" width="370" />
-          <h2>Технокряк</h2>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="images/img-2p.jpg" alt="фото продукта2" width="370" />
-          <h2>Постер New Orlean vs Golden Star</h2>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="images/img-3p.jpg" alt="фото продукта3" width="370" />
-          <h2>Ресторан Seafood</h2>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img src="images/img-4p.jpg" alt="фото продукта4" width="370" />
-          <h2>Проект Prime</h2>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="images/img-5p.jpg" alt="фото продукта5" width="370" />
-          <h2>Проект Boxes</h2>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img src="images/img-6p.jpg" alt="фото продукта6" width="370" />
-          <h2>Inspiration has no Borders</h2>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="images/img-7p.jpg" alt="фото продукта7" width="370" />
-          <h2>Издание Limited Edition</h2>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="images/img-8p.jpg" alt="фото продукта8" width="370" />
-          <h2>Проект LAB</h2>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="images/img-9p.jpg" alt="фото продукта9" width="370" />
-          <h2>Growing Business</h2>
-          <p>Приложение</p>
-        </li>
-      </ul>
-    </main>
-    <footer class="footer">
-      <a href="./index.html" class="footer-logo">
-        <span class="footer-logo-first-part">Web</span>Studio</a
-      >
-      <address class="footer-address">
-        <ul>
+      <section class="hero-portfolio">
+        <ul class="btn-list">
           <li>
-            <p class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <button type="button" class="hero-button-list">Все</button>
           </li>
           <li>
-            <a href="mailto:info@example.com" class="footer-mail accent"
-              >info@example.com</a
-            >
+            <button type="button" class="hero-button-list">Веб-сайты</button>
           </li>
           <li>
-            <a href="tel:+380991111111" class="footer-tel accent link"
-              >+38 099 111 11 11</a
-            >
+            <button type="button" class="hero-button-list">Приложения</button>
+          </li>
+          <li>
+            <button type="button" class="hero-button-list">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="hero-button-list">Маркетинг</button>
           </li>
         </ul>
-      </address>
+        <ul class="product-list">
+          <li>
+            <img src="images/img-1p.jpg" alt="фото продукта1" width="370" class="product-gallery" />
+            <h2 class="product-img">Технокряк</h2>
+            <p class="product-img-name">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="images/img-2p.jpg" alt="фото продукта2" width="370" class="product-gallery" />
+            <h2 class="product-img">Постер New Orlean vs Golden Star</h2>
+            <p class="product-img-name">Дизайн</p>
+          </li>
+          <li>
+            <img src="images/img-3p.jpg" alt="фото продукта3" width="370" class="product-gallery" />
+            <h2 class="product-img">Ресторан Seafood</h2>
+            <p class="product-img-name">Приложение</p>
+          </li>
+          <li>
+            <img src="images/img-4p.jpg" alt="фото продукта4" width="370" class="product-gallery" />
+            <h2 class="product-img">Проект Prime</h2>
+            <p class="product-img-name">Маркетинг</p>
+          </li>
+          <li>
+            <img src="images/img-5p.jpg" alt="фото продукта5" width="370" class="product-gallery" />
+            <h2 class="product-img">Проект Boxes</h2>
+            <p class="product-img-name">Приложение</p>
+          </li>
+          <li>
+            <img src="images/img-6p.jpg" alt="фото продукта6" width="370" class="product-gallery" />
+            <h2 class="product-img">Inspiration has no Borders</h2>
+            <p class="product-img-name">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="images/img-7p.jpg" alt="фото продукта7" width="370" class="product-gallery" />
+            <h class="product-img" s>Издание Limited Edition</h>
+            <p class="product-img-name">Дизайн</p>
+          </li>
+          <li>
+            <img src="images/img-8p.jpg" alt="фото продукта8" width="370" class="product-gallery" />
+            <h2 class="product-img">Проект LAB</h2>
+            <p class="product-img-name">Маркетинг</p>
+          </li>
+          <li>
+            <img src="images/img-9p.jpg" alt="фото продукта9" width="370" class="product-gallery" />
+            <h2 class="product-img">Growing Business</h2>
+            <p class="product-img-name">Приложение</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="footer-logo"
+          ><span class="footer-logo-first-part">Web</span>Studio
+        </a>
+        <address class="footer-address">
+          <ul class="footer-list link list">
+            <li>
+              <p class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</p>
+            </li>
+            <li>
+              <a href="mailto:info@example.com" class="footer-mail accent">info@example.com</a>
+            </li>
+            <li>
+              <a href="tel:+380991111111" class="footer-tel accent">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
