--- a/portfolio.html
+++ b/portfolio.html
@@ -81,49 +81,112 @@
         </ul>
         <ul class="product-list">
           <li>
-            <img src="images/img-1p.jpg" alt="фото продукта1" width="370" class="product-gallery" />
-            <h2 class="product-img">Технокряк</h2>
-            <p class="product-img-name">Веб-сайт</p>
+            <a href="">
+              <img
+                src="images/img-1p.jpg"
+                alt="фото продукта1"
+                width="370"
+                class="product-gallery"
+              />
+              <h2 class="product-img">Технокряк</h2>
+              <p class="product-img-name">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img src="images/img-2p.jpg" alt="фото продукта2" width="370" class="product-gallery" />
-            <h2 class="product-img">Постер New Orlean vs Golden Star</h2>
-            <p class="product-img-name">Дизайн</p>
+            <a href="">
+              <img
+                src="images/img-2p.jpg"
+                alt="фото продукта2"
+                width="370"
+                class="product-gallery"
+              />
+              <h2 class="product-img">Постер New Orlean vs Golden Star</h2>
+              <p class="product-img-name">Дизайн</p></a
+            >
           </li>
           <li>
-            <img src="images/img-3p.jpg" alt="фото продукта3" width="370" class="product-gallery" />
-            <h2 class="product-img">Ресторан Seafood</h2>
-            <p class="product-img-name">Приложение</p>
+            <a href="">
+              <img
+                src="images/img-3p.jpg"
+                alt="фото продукта3"
+                width="370"
+                class="product-gallery"
+              />
+              <h2 class="product-img">Ресторан Seafood</h2>
+              <p class="product-img-name">Приложение</p></a
+            >
           </li>
           <li>
-            <img src="images/img-4p.jpg" alt="фото продукта4" width="370" class="product-gallery" />
-            <h2 class="product-img">Проект Prime</h2>
-            <p class="product-img-name">Маркетинг</p>
+            <a href="">
+              <img
+                src="images/img-4p.jpg"
+                alt="фото продукта4"
+                width="370"
+                class="product-gallery"
+              />
+              <h2 class="product-img">Проект Prime</h2>
+              <p class="product-img-name">Маркетинг</p></a
+            >
           </li>
           <li>
-            <img src="images/img-5p.jpg" alt="фото продукта5" width="370" class="product-gallery" />
-            <h2 class="product-img">Проект Boxes</h2>
-            <p class="product-img-name">Приложение</p>
+            <a href="">
+              <img
+                src="images/img-5p.jpg"
+                alt="фото продукта5"
+                width="370"
+                class="product-gallery"
+              />
+              <h2 class="product-img">Проект Boxes</h2>
+              <p class="product-img-name">Приложение</p></a
+            >
           </li>
           <li>
-            <img src="images/img-6p.jpg" alt="фото продукта6" width="370" class="product-gallery" />
-            <h2 class="product-img">Inspiration has no Borders</h2>
-            <p class="product-img-name">Веб-сайт</p>
+            <a href="">
+              <img
+                src="images/img-6p.jpg"
+                alt="фото продукта6"
+                width="370"
+                class="product-gallery"
+              />
+              <h2 class="product-img">Inspiration has no Borders</h2>
+              <p class="product-img-name">Веб-сайт</p></a
+            >
           </li>
           <li>
-            <img src="images/img-7p.jpg" alt="фото продукта7" width="370" class="product-gallery" />
-            <h class="product-img" s>Издание Limited Edition</h>
-            <p class="product-img-name">Дизайн</p>
+            <a href="">
+              <img
+                src="images/img-7p.jpg"
+                alt="фото продукта7"
+                width="370"
+                class="product-gallery"
+              />
+              <h class="product-img" s>Издание Limited Edition</h>
+              <p class="product-img-name">Дизайн</p></a
+            >
           </li>
           <li>
-            <img src="images/img-8p.jpg" alt="фото продукта8" width="370" class="product-gallery" />
-            <h2 class="product-img">Проект LAB</h2>
-            <p class="product-img-name">Маркетинг</p>
+            <a href="">
+              <img
+                src="images/img-8p.jpg"
+                alt="фото продукта8"
+                width="370"
+                class="product-gallery"
+              />
+              <h2 class="product-img">Проект LAB</h2>
+              <p class="product-img-name">Маркетинг</p></a
+            >
           </li>
           <li>
-            <img src="images/img-9p.jpg" alt="фото продукта9" width="370" class="product-gallery" />
-            <h2 class="product-img">Growing Business</h2>
-            <p class="product-img-name">Приложение</p>
+            <a href="">
+              <img
+                src="images/img-9p.jpg"
+                alt="фото продукта9"
+                width="370"
+                class="product-gallery"
+              />
+              <h2 class="product-img">Growing Business</h2>
+              <p class="product-img-name">Приложение</p></a
+            >
           </li>
         </ul>
       </section>
