--- a/index.html
+++ b/index.html
@@ -29,20 +29,12 @@
         <nav class="header-navigation">
           <ul class="header-list list">
             <li class="header-item">
-              <a
-                href="./index.html"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="link-nav link"
+              <a href="./index.html" rel="noopener noreferrer nofollow" class="link-nav link"
                 >Студия</a
               >
             </li>
             <li class="header-item">
-              <a
-                href="./portfolio.html"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="link-nav link"
+              <a href="./portfolio.html" rel="noopener noreferrer nofollow" class="link-nav link"
                 >Портфолио</a
               >
             </li>
