--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
     <main class="main-portfolio">
       <h1 class="visually-hidden">Продукты Вебстудии</h1>
       <section class="hero-portfolio">
-        <ul class="btn-list">
+        <ul class="btn-list list">
           <li>
             <button type="button" class="hero-button-list">Все</button>
           </li>
@@ -71,114 +71,69 @@
             <button type="button" class="hero-button-list">Маркетинг</button>
           </li>
         </ul>
-        <ul class="product-list">
+        <ul class="product-list list">
           <li>
             <a href="">
-              <img
-                src="images/img-1p.jpg"
-                alt="фото продукта1"
-                width="370"
-                class="product-gallery"
-              />
-              <h2 class="product-img">Технокряк</h2>
-              <p class="product-img-name">Веб-сайт</p>
-            </a>
+              <img src="images/img-1p.jpg" alt="фото продукта1" width="370" class="product-gallery"
+            /></a>
+            <h2 class="product-img">Технокряк</h2>
+            <p class="product-img-name">Веб-сайт</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="images/img-2p.jpg"
-                alt="фото продукта2"
-                width="370"
-                class="product-gallery"
-              />
-              <h2 class="product-img">Постер New Orlean vs Golden Star</h2>
-              <p class="product-img-name">Дизайн</p></a
-            >
+              <img src="images/img-2p.jpg" alt="фото продукта2" width="370" class="product-gallery"
+            /></a>
+            <h2 class="product-img">Постер New Orlean vs Golden Star</h2>
+            <p class="product-img-name">Дизайн</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="images/img-3p.jpg"
-                alt="фото продукта3"
-                width="370"
-                class="product-gallery"
-              />
-              <h2 class="product-img">Ресторан Seafood</h2>
-              <p class="product-img-name">Приложение</p></a
-            >
+              <img src="images/img-3p.jpg" alt="фото продукта3" width="370" class="product-gallery"
+            /></a>
+            <h2 class="product-img">Ресторан Seafood</h2>
+            <p class="product-img-name">Приложение</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="images/img-4p.jpg"
-                alt="фото продукта4"
-                width="370"
-                class="product-gallery"
-              />
-              <h2 class="product-img">Проект Prime</h2>
-              <p class="product-img-name">Маркетинг</p></a
-            >
+              <img src="images/img-4p.jpg" alt="фото продукта4" width="370" class="product-gallery"
+            /></a>
+            <h2 class="product-img">Проект Prime</h2>
+            <p class="product-img-name">Маркетинг</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="images/img-5p.jpg"
-                alt="фото продукта5"
-                width="370"
-                class="product-gallery"
-              />
-              <h2 class="product-img">Проект Boxes</h2>
-              <p class="product-img-name">Приложение</p></a
-            >
+              <img src="images/img-5p.jpg" alt="фото продукта5" width="370" class="product-gallery"
+            /></a>
+            <h2 class="product-img">Проект Boxes</h2>
+            <p class="product-img-name">Приложение</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="images/img-6p.jpg"
-                alt="фото продукта6"
-                width="370"
-                class="product-gallery"
-              />
-              <h2 class="product-img">Inspiration has no Borders</h2>
-              <p class="product-img-name">Веб-сайт</p></a
-            >
+              <img src="images/img-6p.jpg" alt="фото продукта6" width="370" class="product-gallery"
+            /></a>
+            <h2 class="product-img">Inspiration has no Borders</h2>
+            <p class="product-img-name">Веб-сайт</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="images/img-7p.jpg"
-                alt="фото продукта7"
-                width="370"
-                class="product-gallery"
-              />
-              <h class="product-img" s>Издание Limited Edition</h>
-              <p class="product-img-name">Дизайн</p></a
-            >
+              <img src="images/img-7p.jpg" alt="фото продукта7" width="370" class="product-gallery"
+            /></a>
+            <h2 class="product-img">Издание Limited Edition</h2>
+            <p class="product-img-name">Дизайн</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="images/img-8p.jpg"
-                alt="фото продукта8"
-                width="370"
-                class="product-gallery"
-              />
-              <h2 class="product-img">Проект LAB</h2>
-              <p class="product-img-name">Маркетинг</p></a
-            >
+              <img src="images/img-8p.jpg" alt="фото продукта8" width="370" class="product-gallery"
+            /></a>
+            <h2 class="product-img">Проект LAB</h2>
+            <p class="product-img-name">Маркетинг</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="images/img-9p.jpg"
-                alt="фото продукта9"
-                width="370"
-                class="product-gallery"
-              />
-              <h2 class="product-img">Growing Business</h2>
-              <p class="product-img-name">Приложение</p></a
-            >
+              <img src="images/img-9p.jpg" alt="фото продукта9" width="370" class="product-gallery"
+            /></a>
+            <h2 class="product-img">Growing Business</h2>
+            <p class="product-img-name">Приложение</p>
           </li>
         </ul>
       </section>
